# tooldl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  buildAndPack.yml
src/: cli.rs  github.rs  main.rs  zip_utils.rs
