[package]
name = "tooldl"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = [ "blocking", "json" ] }
tokio = { version = "1.18.2", features = ["full"] }
keyring = "1.1.2"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
zip = "0.6.2"
